Fixed a gallery layout problem.

--- a/src-gwt/org/opencms/ade/galleries/client/ui/css/gallerydialog.css
+++ b/src-gwt/org/opencms/ade/galleries/client/ui/css/gallerydialog.css
@@ -130,7 +130,7 @@ div.searchTabRowRightAlign {
 	text-align: right;
 }
 div.searchTabLabelLeft {
-	width: 120px;
+	width: 115px;
 	float: left;
 	margin-top: 2px;
 }
